# scale-signature-interfaces

./: .golangci.yaml  Cargo.toml  README.md  go.mod  index.ts  interfaces.go  lib.rs  package-lock.json  package.json
.github/workflows/: lint.yml  release.yml
